--- a/source/webapp/templates/poll/index.html
+++ b/source/webapp/templates/poll/index.html
@@ -11,7 +11,7 @@
     {% endif %}
     <hr/>
 
-    <div class="row">
+    <div>
         {% for poll in polls %}
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3">
                 <div class="card">
