--- a/source/webapp/templates/poll/poll.html
+++ b/source/webapp/templates/poll/poll.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Delete task{% endblock %}
+{% block title %}Poll{% endblock %}
 {% block menu %}
     <li><a href="{% url 'poll_update' poll.pk %}">Edit</a></li>
     <li><a href="{% url 'poll_delete' poll.pk %}">Delete</a></li>
